--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.FireflyRemote" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.FireflyRemote" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -15,9 +15,6 @@
     </style>
 
     <style name="Theme.FireflyRemote.Fullscreen" parent="Theme.FireflyRemote">
-        <item name="android:actionBarStyle">@style/Widget.Theme.FireflyRemote.ActionBar.Fullscreen
-        </item>
-        <item name="android:windowActionBarOverlay">true</item>
         <item name="android:windowBackground">@null</item>
     </style>
 
